# Fastest-shop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  main.tf  package-lock.json  package.json
public/: index.html  login.html
src/: main.rs
